<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">家校-家长</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">家校平台</string>
    <string name="login_btn_text">登录</string>
    <string name="go_register_text">马上注册</string>
    <string name="hint_login_worknum">工号</string>
    <string name="hint_login_stunum">学号</string>
    <string name="hint_login_password">密码</string>
    <string name="register_text">注册用户</string>
    <string name="hint_register_worknum">工号</string>
    <string name="hint_register_phone">手机号</string>
    <string name="hint_register_password">密码</string>
    <string name="hint_register_repassword">确认密码</string>
    <string name="hint_register_name">姓名</string>
    <string name="hint_register_age">年龄</string>
    <string name="hint_register_motto">个性签名</string>
    <string name="btn_register_text">注册</string>
    <string name="btn_save_text">保存</string>
    <string name="btn_cancel_text">取消</string>
    <string name="menu_message_text">公告</string>
    <string name="menu_attendance_text">考勤</string>
    <string name="menu_chat_text">沟通</string>
    <string name="menu_works_text">作品</string>
    <string name="top_tip_message">公告</string>
    <string name="text_delete">删除</string>
    <string name="top_tip_student_list">学生列表</string>
    <string name="text_student_name">姓名</string>
    <string name="text_student_stunum">学号</string>
    <string name="text_student_sex">性别</string>
    <string name="text_student_worksnum">作品</string>
    <string name="text_oprate">操作</string>
    <string name="hint_add_student_name">姓名</string>
    <string name="hint_add_student_stunum">学号</string>
    <string name="top_tip_student_parent">家长列表</string>
    <string name="btn_text_send">发送</string>
    <string name="text_btn_send">发送</string>
    <string name="text_btn_save">保存</string>
    <string name="text_btn_cancel">取消</string>
    <string name="text_student_parent">家长</string>
    <string name="top_tip_chat">沟通信息</string>
    <string name="top_tip_works">优秀作品</string>
    <string name="top_tip_attendance_list">考勤列表</string>
    <string name="text_time">时间</string>
    <string name="text_btn_share">分享</string>

</resources>